Ajustes estilos da página

--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap');
+
+
 *{
     box-sizing: border-box;
 }
 
 body{
     display: flex;
+    background-color: #09072C;
+    font-family: 'Comfortaa', cursive;
+    color: #FFF;
 }
 
 main{
     text-align: center;
-
-
     padding: 0 10vh;
     width: 85%;
-    background-color: cornflowerblue;
     height: 100vh;
     display: grid;
-    row-gap: 3%;
-    grid-template-rows: 15% 20% 30% 20%;
+    row-gap: 5%;
+    grid-template-rows: 15% 20% 25% 20%;
     grid-template-areas: 'sectionMainTitle' ' sectionListenAgain' 'sectionHits' 'sectionNews';
 }
 
@@ -27,39 +30,58 @@ nav{
 
 .section-main-title{
     grid-area: sectionMainTitle;
-    background-color: chocolate;
-}
-
-.main-title{
-    
+    background-color: rgba(255, 255, 255, 0.25);
+    border-radius: 1vh;
 }
 
 .section-listen-again{
     grid-area: sectionListenAgain;
-    background-color: green;
+    background-color: rgba(255, 255, 255, 0.25);
+    border-radius: 1vh;
 }
 
 .section-hits{
     grid-area: sectionHits;
-    background-color: grey;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-content: center;
 }
 
-.hit-nacional{
-    background-color: #fff;
-}
-.hit-internacional{
-    background-color: cyan;
+.hits-box{
+    display: grid;
+    grid-template-rows: 20% 80%;
+    grid-template-areas: 'suggestionsTitle' ' avatarOptions' ;
+    background-color: rgba(255, 255, 255, 0.25);
+    border-radius: 1vh;
+    padding: 2vh;
 }
 
-.suggestions{
-    background-color: red;
+.suggestions-title{
+    text-align: center;
+    font-size: 22px;
+    grid-area: suggestionsTitle;
+}
+
+.avatar-options{
+    grid-area: avatarOptions;
+    display: flex;
+    gap: 5%;
+    align-items: center;
+}
+
+.avatar-options ol{
+    width: 45%;
+    line-height: 1.6;
+}
+
+.suggestions-avatar{
+    border-radius: 50%;
+    width: 50%;
 }
 
 .section-news{
     grid-area: sectionNews;
-    background-color: hotpink;
+    background-color: rgba(255, 255, 255, 0.25);
+    border-radius: 1vh;
 }
