Alterações Menu lateral e player

--- a/css/menu.css
+++ b/css/menu.css
@@ -39,17 +39,22 @@
     text-decoration: none;
 }
 
+.div-mais-ouvidas, .div-playlists{
+    padding: 10px;
+    padding-left: 15px;
+    font-family: 'Comfortaa', cursive;
+    font-size: 3vh;
+}
+
 .link {
-    padding: 20px;
+    padding: 15px 0 15px 0;
     padding-left: 30px;
-    font-family: 'Kanit', sans-serif;
     font-size: 12pt;
     transition: all 200ms linear;
     color: #f4f4f9;
-    border-bottom: 2px solid #222;
     opacity: 0;
     margin-left: -200px;
-    font-size: 2.5vh;
+    font-size: 2vh;
 }
 
 #check:checked~.bar {
@@ -73,6 +78,7 @@
     align-items: center;
     font-weight: bold;
     font-size: 2.75vh;
+    padding-bottom: 25px;
 }
 
 
