--- a/css/homePage.css
+++ b/css/homePage.css
@@ -15,6 +15,7 @@ body{
     font-family: 'Comfortaa', cursive;
     color: #FFF;
     font-size: 2.5vh;
+    flex-direction: column;
 }
 
 footer{
@@ -22,7 +23,7 @@ footer{
 }
 
 .main{
-    padding: 5vh 10vh 5vh 10vh;
+    padding: 5vh 10vh 0vh 10vh;
     width: 100%;
     height: 90vh;
     display: grid;
@@ -33,7 +34,7 @@ footer{
 }
 
 .moveMain{
-    padding: 5vh 10vh 5vh 20%;
+    padding: 5vh 10vh 0vh 20%;
     transition-delay: 200ms;
 }
 
